# ros-opencog-chatbot

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: chatbot.yaml
include/chatbot_api/: chatbot_api.h  sentence_info.h
include/ros_opencog_chatbot/: chatbot_node.h
launch/: opencog_chatbot.launch
src/: chatbot_node.cpp
src/chatbot_api/: chatbot_api.cpp  sentence_info.cpp
